[gd_scene load_steps=2 format=2]

[ext_resource path="res://Script/ConnectionScreen.gd" type="Script" id=1]

[node name="ConnectionScreen" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -499.0
offset_right = 500.0
offset_bottom = 501.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
offset_left = 214.0
offset_top = 249.0
offset_right = 804.0
offset_bottom = 615.0

[node name="ConnectionScreen" type="Control" parent="Panel"]
offset_right = 285.0
offset_bottom = 365.0

[node name="EmailLabel" type="Label" parent="Panel/ConnectionScreen"]
offset_left = 122.0
offset_top = 115.0
offset_right = 157.0
offset_bottom = 129.0
text = "Email"

[node name="EmailText" type="LineEdit" parent="Panel/ConnectionScreen"]
offset_left = 28.0
offset_top = 135.0
offset_right = 265.0
offset_bottom = 163.0
text = "guest@gmail.com"

[node name="PasswordLabel" type="Label" parent="Panel/ConnectionScreen"]
offset_left = 110.0
offset_top = 180.0
offset_right = 175.0
offset_bottom = 195.0
text = "Password"

[node name="PasswordText" type="LineEdit" parent="Panel/ConnectionScreen"]
offset_left = 28.0
offset_top = 202.0
offset_right = 265.0
offset_bottom = 230.0
text = "password"
secret = true

[node name="LoginButton" type="Button" parent="Panel/ConnectionScreen"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -59.5
offset_top = -74.0
offset_right = 48.5
offset_bottom = -20.0
text = "Login"
icon_alignment = 1

[node name="ErreurTextConnection" type="RichTextLabel" parent="Panel/ConnectionScreen"]
modulate = Color( 1, 0, 0, 1 )
offset_left = 35.0
offset_top = 241.0
offset_right = 263.0
offset_bottom = 281.0

[node name="RegisterScreen" type="Control" parent="Panel"]
offset_left = 303.0
offset_right = 588.0
offset_bottom = 365.0

[node name="ErreurTextRegister" type="RichTextLabel" parent="Panel/RegisterScreen"]
modulate = Color( 1, 0, 0, 1 )
offset_left = 29.0
offset_top = 241.0
offset_right = 262.0
offset_bottom = 281.0

[node name="UsernameLabel" type="Label" parent="Panel/RegisterScreen"]
offset_left = 106.0
offset_top = 51.0
offset_right = 181.0
offset_bottom = 65.0
text = "Username"

[node name="UsernameText" type="LineEdit" parent="Panel/RegisterScreen"]
offset_left = 28.0
offset_top = 73.0
offset_right = 265.0
offset_bottom = 101.0

[node name="EmailLabel" type="Label" parent="Panel/RegisterScreen"]
offset_left = 122.0
offset_top = 115.0
offset_right = 157.0
offset_bottom = 129.0
text = "Email"

[node name="EmailText" type="LineEdit" parent="Panel/RegisterScreen"]
offset_left = 28.0
offset_top = 135.0
offset_right = 265.0
offset_bottom = 163.0

[node name="PasswordLabel" type="Label" parent="Panel/RegisterScreen"]
offset_left = 110.0
offset_top = 180.0
offset_right = 175.0
offset_bottom = 195.0
text = "Password"

[node name="PasswordText" type="LineEdit" parent="Panel/RegisterScreen"]
offset_left = 28.0
offset_top = 202.0
offset_right = 265.0
offset_bottom = 230.0
secret = true

[node name="RegisterButton" type="Button" parent="Panel/RegisterScreen"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -54.5
offset_top = -74.0
offset_right = 54.5
offset_bottom = -20.0
text = "Register"
icon_alignment = 1

[node name="Line2D" type="Line2D" parent="Panel"]
position = Vector2( -7, -1.78799 )
scale = Vector2( 1, 1.02653 )
points = PackedVector2Array( 303, 2, 303, 359 )
default_color = Color( 1, 1, 1, 1 )

[connection signal="pressed" from="Panel/ConnectionScreen/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="Panel/RegisterScreen/RegisterButton" to="." method="_on_RegisterButton_pressed"]
